--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,7 +3,7 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title BOOK PROJECT
+        title BookProject
     body
         header.header
             ul
@@ -11,7 +11,5 @@ html(lang="en")
                     a(href="/") HOME
                 li
                     a(href="/book") BOOK
-
         main.main
             block content
-            
